# deriva-ml-model-template

./: .gitignore  CIFAR10.md  CLAUDE.md  E2E_TEST_PLAN.md  Experiments.md  README.md  bump-version  coding-guidelines.md  e2e_test_steps.md  experiment-decisions.md  mkdocs.yml  ml_test.py  pyproject.toml  validate_multirun.py
.claude/skills/new-model/: SKILL.md
.claude/skills/new-notebook/: SKILL.md
.github/workflows/: publish-docs.yml  release.yml
config/: deriva.yaml
docs/: e2e-test-2026-05-19-journal.archived.md  e2e-test-2026-05-19-journal.md  index.md
docs/configuration/: experiments.md  groups.md  notebooks.md  overview.md
docs/findings/: 2026-05-16-phase-1-improvements.md  2026-05-17-skill-audit.md  README.md
docs/getting-started/: creating-models.md  creating-notebooks.md  environment-setup.md  quick-start.md
docs/reference/: cifar10-example.md  coding-guidelines.md
docs/superpowers/plans/: 2026-05-13-e2e-platform-test.md
docs/superpowers/specs/: 2026-05-13-e2e-platform-test-design.md
docs/test-plans/: 2026-05-20-e2e-multipersona.md
docs/workflow/: experiments.md  git.md  versioning.md
multirun/2026-01-14/17-00-33/: multirun.yaml
multirun/2026-01-14/17-00-42/: multirun.yaml
multirun/2026-01-14/17-00-53/: multirun.yaml
multirun/2026-01-14/17-00-53/0/hydra-config/: config.yaml  hydra.yaml  overrides.yaml
multirun/2026-01-14/17-00-53/1/hydra-config/: config.yaml  hydra.yaml  overrides.yaml
multirun/2026-01-14/18-16-49/: multirun.yaml
multirun/2026-01-14/18-16-49/0/hydra-config/: config.yaml  hydra.yaml  overrides.yaml
multirun/2026-01-14/18-16-49/1/hydra-config/: config.yaml  hydra.yaml  overrides.yaml
notebooks/: notebook_demo.ipynb  notebook_template.ipynb  parameters1.json  roc_analysis.ipynb
scripts/: assets.toml  ml_test.py  pyproject.toml  script_demo.pl  script_demo.py  test.py  test_bag_fk_traversal.py  upload_assets.py
src/: configure.py  deriva_run.py  install_kernel.py  model_runner.py  notebook_utils.py  params.json  script_template.py
src/configs/: __init__.py  assets.py  base.py  cifar10_cnn.py  dataset_generation.py  datasets.py  deriva.py  executions.py  experiments.py  model.py  models.py  multirun_descriptions.py  multiruns.py  roc_analysis.py  simple_model.py  sweeps.py  utils.py  workflow.py
src/configs/dev/: __init__.py  assets.py  assets_localhost.py  datasets.py  datasets_localhost.py  deriva.py  deriva_localhost.py  experiments.py  roc_analysis_localhost.py
src/models/: cifar10_classes.py  cifar10_cnn.py  model_protocol.py  simple_model.py
src/scripts/: _cifar10_assets.py  _cifar10_datasets.py  _cifar10_schema.py  _cifar10_source.py  load_cifar10.py  test_dataset_types.py  test_restructure_assets.py
tests/: test_cifar10_assets.py  test_cifar10_datasets.py  test_cifar10_schema.py  test_cifar10_source.py  test_configs_load.py
