
[project]
name = "deriva-model-template"  # Change this to be the name of the current project.
dynamic = ["version"]
authors = [
    {name = "ISRD", email = "isrd-dev@isi.edu"},
]
description = "A test template for using DerivaML"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Add a line for the domain specific classes build on DerivaML
     "deriva-ml",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "ruff",
    "ipython"
]

[tool.uv.sources]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"

[tool.setuptools.data-files]
# install script into the user's local bin directory


[metadata]
license = "Apache 2.0"
keywords = ["deriva-ml"]